add publick analysys endpoint
