# src/routes/publicStock.routes.ts
@@ -1,0 +1,7 @@
+import { Router } from 'express';
+
+import { getStockAnalysis } from '../controllers/stock.controller';
+
+export const publicStockRouter = Router();
+
+publicStockRouter.get('/:symbol/analysis', getStockAnalysis);
